Fix updating message list date/time formatting on day changes

DateFormatter caches the date change time internally, and that is never
invalidated. No idea how that worked in the 5 series...

To fix this, recreate the DateFormatter in the already existing code for
handling the day change in message list.

BUG: 484119